Add: report function

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,10 +13,16 @@
 <body>
 <h1 class="text-center text-muted">Библиотека</h1>
 <div class="tab-content">
-    <a href="/docs#/Книги/look_for_book_books_find__book_id__get" class="btn btn-sm btn-primary mt-3 rounded-pill">Узнать местоположение книги</a>
-    <a href="/docs#/Книги/get_mvp_book_books_mvp_book_get" class="btn btn-sm btn-primary mt-3 rounded-pill">Самая читаемая книга</a>
-    <a href="/docs#/Авторы%20книг/get_mvp_author_authorsmvp_author_get" class="btn btn-sm btn-primary mt-3 rounded-pill">Самый читаемый автор</a>
-    <a href="/docs#/Движения%20книг/get_report_about_transactions_books_transactions_report_get" class="btn btn-sm btn-primary mt-3 rounded-pill">Получение записей, просроченных возврат книги</a>
+    <a href="/docs#/Книги/look_for_book_books_find__book_id__get"
+       class="btn btn-sm btn-primary mt-3 rounded-pill">Узнать местоположение книги</a>
+    <a href="/docs#/Книги/get_mvp_book_books_mvp_book_get"
+       class="btn btn-sm btn-primary mt-3 rounded-pill">Самая читаемая книга</a>
+    <a href="/docs#/Авторы%20книг/get_mvp_author_authorsmvp_author_get"
+       class="btn btn-sm btn-primary mt-3 rounded-pill">Самый читаемый автор</a>
+    <a href="/docs#/Движения%20книг/get_report_about_transactions_books_transactions_report_get"
+       class="btn btn-sm btn-primary mt-3 rounded-pill">Получение записей, просроченных возврат книги</a>
+    <a href="/ui/report"
+       class="btn btn-sm btn-warning mt-3 rounded-pill">Получить отчет о читателях, не сдавших книгу вовремя</a>
 </div>
 <div class="tab-content" id="tabContent">
     <div class="tab-pane tab-pane-garage fade active show" id="nav-cars" role="tabpanel"
